CHANGELOG
=========

MyKnowledgeBase version 3.8 - may 2016
- theme now supports post formats
- file header: updated head section
- added file content-list 
- files archive, index and search: relocated part of loop to separate file
- file index en css: changed featured post notice
- file single: changed .page-title-post into .post-title-single
- changed .sticky into .sticky-title
- several small adjustments

MyKnowledgeBase version 3.6 - april 2016
- resized all headings (thanks Tom)
- changed address tag display
- several small adjustments

MyKnowledgeBase version 3.5 - march 2016
- localized mobile menu
- mobile menu now supports 2 level subpages

MyKnowledgeBase version 3.4 - march 2016
- added file postmeta-single
- file single: relocated postmetadata to separate file
- bugfix in file custom-editor-style: removed tags from reset stylesheet
- seo improvement: blog description is h2 (thanks Tom)
- seo improvement: all page titles are h1 and all post titles are h2 (thanks Tom)
- seo improvement: all widget titles are h3 (thanks Tom)
- file single: changed title class into .page-title-post
- file header: changed class .search-title into .searchbar-title
- updated readme file to WordPress default

MyKnowledgeBase version 3.3 - march 2016
- added file postmeta
- files archive, index, search and single: relocated postmetadata to separate file
- file style and custom-editor-style: updated html tags (thanks Tom)
- updated text strings (thanks Tom)
- several small adjustments

MyKnowledgeBase version 3.2 - february 2016
- file header: the search bar in header is for posts only
- theme customizer: change search bar title
- file search: post nav inside the loop
- file style: fixed alignment of next and prev post link
- several small adjustments

MyKnowledgeBase version 2.9 - january 2016
- file header: removed is_home so homepage content is not displayed when using a static blog page
- several small adjustments

MyKnowledgeBase version 2.8 - january 2016