@@ -13,7 +13,7 @@
 		<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php printf(__('Permalink to %s', 'myknowledgebase'), the_title_attribute('echo=0')); ?>"> <?php the_title(); ?></a> 
 	</h2>
 
-	<?php get_template_part( 'postmeta' ); ?>
+	<?php get_template_part( 'content-postmeta' ); ?>
 
 	<?php if ( has_post_thumbnail() ) { 
 		the_post_thumbnail(); 
