@@ -6,12 +6,11 @@
 
 <?php get_header(); ?>
 <div id="content">
+	<?php if ( have_posts() ) : ?>
 
-	<?php if (have_posts()) : while (have_posts()) : the_post(); ?>
-
-		<?php get_template_part( 'content-list' ); ?>
-
-	<?php endwhile; ?>
+		<?php while ( have_posts() ) : the_post(); ?>
+			<?php get_template_part( 'content-list' ); ?>
+		<?php endwhile; ?>
 
 		<div class="post-nav">
 			<?php next_posts_link(); ?>
@@ -19,11 +18,9 @@
 		</div>
 
 	<?php else: ?>
-		<h1 class="page-title"><?php _e( 'Nothing Found', 'myknowledgebase' ); ?></h1>
-		<p><?php _e('Sorry, no posts matched your criteria.', 'myknowledgebase'); ?></p>
+		<?php get_template_part( 'content-none' ); ?>
 
 	<?php endif; ?>
-
 </div>
 <?php get_sidebar(); ?>
 <?php get_footer(); ?>
